# xuexcy.github.io

./: 404.html  CNAME  README.md  copy_between_blogs_and_directories.sh  hugo.toml.bak  hugo.yaml  index.html  index.xml  sitemap.xml  start_server.sh
.github/workflows/: hugo.yml
about/: index.html
archives/: index.html
categories/: index.html  index.xml
categories/cpp/: index.html  index.xml
categories/github/: index.html  index.xml
categories/none/: index.html  index.xml
categories/obsidian/: index.html  index.xml
categories/syntax/: index.html  index.xml
categories/test/: index.html  index.xml
categories/test-with-whitespaces/: index.html  index.xml
categories/themes/: index.html  index.xml
categories/tips/: index.html  index.xml
categories/备忘/: index.html  index.xml
categories/天天/: index.html  index.xml
categories/并行/: index.html  index.xml
categories/测试/: index.html  index.xml
life/: index.html  index.xml
life/tiantian/: index.html
links/: index.html
page/: index.html  index.xml
page/1/: index.html
post/: index.html  index.xml  run.sh
post/cmake导入boost使用/: index.html
post/cmake导入boost使用/code/: CMakeLists.txt  output.txt
post/emoji-support/: index.html
post/gperftools-cpu性能分析/: index.html
post/markdown-syntax-guide/: index.html
post/math-typesetting/: index.html
post/migrate-from-jekyl/: index.html
post/obsidian跨平台同步/: index.html
public/: index.html  sitemap.xml
search/: index.html  index.json
tags/: index.html  index.xml
xcy/: backup.sh  copy_between_blogs_and_directories.sh  pub.sh  start_server.sh
(+238 files in other folders)
